--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <center><h3>“Dedication, hard work all the time, and belief.”― <a href="https://www.instagram.com/cristiano/?hl=en">@Cristiano</a></center></h3>
 <hr>
 <Div class="c9">*# THIS IS A ENTRY LEVEL WEB DESIGN TEST PAGE WITH HTML AND CSS #*</div>
-<center><img src=chris.PNG width="1000" height="540" ></center>
+<center><img src=chris.jpg width="1000" height="540" ></center>
 <br>
 <br>
 <div class="c7">
@@ -56,7 +56,7 @@
 <img src=smirthi11.jpg width="350" height"600" style="float: left; margin-right:15px ;">
 
 
-<img src = vk1.PNG width="450" height="600" style=" float: right; margin-left:15px;">
+<img src = vk1.jpg width="450" height="600" style=" float: right; margin-left:15px;">
 <br>
 <br>
 <h3><center>$ A sports player and a E-sports player<a href="https://instagram.com/iamarun.ar7?igshid=YmMyMTA2M2Y="> @iamarun.ar7  </a> $ </h3></center>
